--- a/MyProblems/build.gradle
+++ b/MyProblems/build.gradle
@@ -11,9 +11,17 @@ repositories {
 }
 
 dependencies {
+    implementation 'info.picocli:picocli:4.7.1'
+    annotationProcessor 'info.picocli:picocli-codegen:4.7.1'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+
+compileJava {
+    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
 }
 
 test {
